@@ -26,9 +26,10 @@ allprojects {
 	apply plugin: "java"
 	apply plugin: "com.diffplug.spotless"
 	java {
-		toolchain {
-			languageVersion = JavaLanguageVersion.of(22)
-		}
+		sourceCompatibility = targetCompatibility = 19
+	}
+	tasks.withType(JavaCompile) {
+		options.compilerArgs += "--enable-preview"
 	}
 	repositories {
 		mavenCentral()
@@ -364,7 +365,8 @@ java {
 javadoc {
 }
 javadoc.options {
-	addStringOption('-release', '22')
+	addBooleanOption('-enable-preview', true)
+	addStringOption('-release', '19')
 }
 
 def moduleName = "com.jyuzawa.onnxruntime"
@@ -391,6 +393,6 @@ tasks.named('compileJava') {
 
 test {
 	useJUnitPlatform()
-	jvmArgs '--enable-native-access=ALL-UNNAMED'
+	jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
 	finalizedBy jacocoTestReport
 }
